@@ -1,3 +1,4 @@
+2891 [DGIndexIM Indexer]    fixed invalid input filter syntax (regression of 2890)
 2890 [Settings]             added option to restrict input filters to 8 bit (enabled by default)
      [x264]                 fixed high bit depth support if ffmpeg is not used
 2889 [Queue]                multiple "waiting" jobs can be assigned to a temporary worker to be processed
